
Cosmetic tweak of debugging output.
----------------------------------------------------------------------
Thu Feb 22 20:48:32 2007                        Michael Jennings (mej)

Fixed horde3 package template.

Fixed permissions problem with chrooted builds.
----------------------------------------------------------------------
Tue Feb 27 16:30:05 2007                        Michael Jennings (mej)

Fix copyright years.
----------------------------------------------------------------------
Tue Feb 27 17:46:42 2007                        Michael Jennings (mej)

New tool -- pkgrepotool -- for managing package repositories.  Lots to
come here; it's nowhere near done yet. :)
----------------------------------------------------------------------
Tue Feb 27 19:54:19 2007                        Michael Jennings (mej)

More repo tool work.
----------------------------------------------------------------------
Wed Feb 28 14:18:18 2007                        Michael Jennings (mej)

pkgrepotool can now:
 - Scan local repositories, FTP, or HTTP
 - Find old, oldest, or newest packages, even across repositories
 - Spawn a pipe to CLU for version comparisons, falling back on
   built-in comparison routine if CLU is missing

Added support for extra headers to &fetch_url() along with progress
output suppression.
----------------------------------------------------------------------
Thu Mar  8 13:21:42 2007                        Michael Jennings (mej)

Add debugging to SRPM timestamp check.
----------------------------------------------------------------------
Thu Mar  8 18:01:11 2007                        Michael Jennings (mej)

Set $RPM_BUILD_NCPUS so RPM doesn't parallelize itself.

Treat .sig and .asc files as sources automatically.

Don't forceably exclude /proc when copying buildroots; if it's there
in the pristine original, there's probably a reason.
----------------------------------------------------------------------